--- a/app/src/scss/default.scss
+++ b/app/src/scss/default.scss
@@ -29,6 +29,18 @@ body {
     justify-content: center;
 }
 
+.logo{
+    position: absolute;
+    top: 0;
+    left: 0;
+    aspect-ratio: 16/9;
+    width: 100px;
+    height: 50px;
+    margin: 4px;
+}
+
+
+
 @keyframes gradient {
 	0% {
 		background-position: 0% 50%;
